--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 70%
 }
 
 body {
@@ -92,13 +92,8 @@ section {
     padding: 5rem 9% 5rem;
 }
 
-.home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8rem;
-    background-color: #F3F0DD;
-}
+.home {background-color: transparent}
+
 
 .home .home-content h1 {
     font-size: 6rem;
@@ -201,7 +196,7 @@ span {
 
 .typing-text span::after {
     content: "";
-    background-color: #F3F0DD;
+    background-color:transparent;
     position: absolute;
     width: calc(100% + 8px);
     height: 100%;
@@ -242,8 +237,8 @@ span {
 
 @media(max-width:995px) {
     .home {
-        flex-direction: column;
-        margin: 5rem 4rem;
+        flex-direction:center;
+        text-align: center; 
     }
 
     .home .home-content h3 {
@@ -588,34 +583,65 @@ body::before {
 }
 
 
-/*making phone friendly */
 @media (max-width: 480px) {
-    html {
-        font-size: 50%;
-    }
+  html {
+    font-size: 60%;
+  }
 
-    nav {
-        width: 70%;
-    }
+  nav {
+    width: 70%;
+  }
 
-    .home-content h1 {
-        font-size: 3.6rem;
-    }
+  .home {
+    flex-direction: column;
+    gap: 3rem;
+    padding: 3rem 1rem;
+    text-align: center;
+  }
 
-    .home-content h3 {
-        font-size: 2rem;
-    }
+  .home-content h1 {
+    font-size: 3.8rem;
+  }
 
-    .home-img img {
-        width: 90vw;
-    }
+  .home-content h3 {
+    font-size: 2.4rem;
+  }
 
-    .typing-text {
-        font-size: 2rem;
-    }
+  .home-content p {
+    font-size: 1.6rem;
+    padding: 0 1rem;
+  }
 
-    .btn {
-        font-size: 1.3rem;
-        padding: 0.8rem 1.8rem;
-    }
+  .typing-text {
+    font-size: 2rem;
+    padding: 1rem 0;
+  }
+
+  .home-img img {
+    width: 90vw;
+  }
+
+  .btn {
+    font-size: 1.4rem;
+    padding: 0.8rem 1.8rem;
+  }
+
+  .social-icons a {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.4rem;
+    margin: 1.5rem 0.5rem 1.5rem 0;
+  }
+
+  section {
+    padding: 3rem 1rem;
+  }
+
+  .skills ul,
+  .education ul,
+  .experience ul {
+    font-size: 1.6rem;
+    padding: 0 1rem;
+  }
 }
+
